Tue Jan 21 17:55:09 2014  Zachary Scott  <e@zzak.io>

	* lib/uri/common.rb: [DOC] Use static w3.org uri [ci skip]
	  Patch by @ykzts [Fix GH-484] https://github.com/ruby/ruby/pull/484

Tue Jan 21 16:43:22 2014  Zachary Scott  <e@zzak.io>

	* enum.c: [DOC] Add simple example of Enumerable#zip [ci skip]
	  Patch by @nruth on documenting-ruby/ruby#22
	  https://github.com/documenting-ruby/ruby/pull/22

Tue Jan 21 16:26:44 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread_pthread.c (rb_thread_create_timer_thread): expand timer
	  thread stack size to get rid of segfault on FreeBSD/powerpc64.
	  based on the patch by Steve Wills at [ruby-core:59923].
	  [ruby-core:56590] [Bug #8783]

Tue Jan 21 04:31:23 2014  Tanaka Akira  <akr@fsij.org>

	* ext/socket/option.c: Use "int" for IP_MULTICAST_LOOP and
	  IP_MULTICAST_TTL on Mac OS X and Windows.

Tue Jan 21 00:39:15 2014  Tanaka Akira  <akr@fsij.org>

	* ext/socket/option.c: Use "byte" as default argument for
	  IP_MULTICAST_LOOP and IP_MULTICAST_TTL socket option to follow
	  the original multicast implementation.

Mon Jan 20 20:20:27 2014  Tanaka Akira  <akr@fsij.org>

	* ext/socket/option.c: Use preprocessor macros to avoid repeated
	  conditionals.

Mon Jan 20 13:55:03 2014  Zachary Scott  <e@zzak.io>

	* lib/rubygems/version.rb: [DOC] Use gender-neutral pronouns [ci skip]
	* lib/rubygems/security.rb: ditto

Sun Jan 19 06:38:48 2014  Benoit Daloze  <eregontp@gmail.com>

	* compar.c (cmp_equal): warn for this release and still rescue
	  standard exceptions for a nicer transition. See #7688.
	  Partly reverts r44502.

	* test/ruby/test_comparable.rb: adapt assertion to match new behavior.

Sun Jan 19 06:27:18 2014  Benoit Daloze  <eregontp@gmail.com>

	* test/ruby/test_comparable.rb: specify behavior for the different
	  kind of exceptions rescued (or not) by Comparable#==.

Sat Jan 18 23:12:19 2014  Tanaka Akira  <akr@fsij.org>

	* ext/socket: Avoid unnecessary ppoll/select on Linux.